# cc-switch

./: .gitignore  Cargo.toml  README_TUI.md  TUI_AUDIT_2026-03-01.md  TUI_CONVERSION_SUMMARY.md  TUI_FUNCTIONALITY_AUDIT.md
.github/workflows/: build.yml
cc-switch-core/: Cargo.toml
cc-switch-core/src/: config.rs  lib.rs  store.rs
cc-switch-core/src/database/: mod.rs
cc-switch-core/src/proxy/: failover_switch.rs  forwarder.rs  handler_context.rs  response_processor.rs  server.rs
cc-switch-core/src/services/: proxy.rs  speedtest.rs  webdav_auto_sync.rs
cc-switch-core/src/services/provider/: live.rs  mod.rs
cc-switch-tui/: Cargo.toml
cc-switch-tui/cc-switch-tui/: TUI_ENHANCEMENT_PLAN.md  TUI_FINAL_VERIFICATION.md  TUI_FIXES_SUMMARY.md  TUI_IMPLEMENTATION.md
cc-switch-tui/src/: app.rs  main.rs
cc-switch-tui/src/app/: actions.rs  dialog_handler.rs  getters.rs  input.rs  mod.rs  runner.rs  state.rs
cc-switch-tui/src/ui/: common.rs  config.rs  dashboard.rs  dialog.rs  mcp.rs  mcp_form.rs  mod.rs  provider_config.rs  provider_form.rs  provider_form_v2.rs  providers.rs  proxy.rs  universal.rs  universal_form.rs
cc-switch-tui/src/ui/forms/: button.rs  checkbox.rs  form_container.rs  mod.rs  select.rs  text_area.rs  text_input.rs
debian/: control  postinst  prerm
scripts/: build-deb.sh
