[package]
name = "cc-switch-core"
version = "3.11.1"
description = "Core library for CC-Switch - AI provider proxy with failover"
authors = ["Jason Young"]
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "cc_switch_core"
crate-type = ["rlib"]

[features]
default = []
test-hooks = []

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# HTTP server and client
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup", "hooks"] }

# Configuration and serialization
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
json5 = "0.4"

# Utilities
dirs = "5.0"
regex = "1.10"
url = "2.5"
base64 = "0.22"
once_cell = "1.21.3"
indexmap = { version = "2", features = ["serde"] }
rust_decimal = "1.33"
uuid = { version = "1.11", features = ["v4"] }
sha2 = "0.10"
tempfile = "3"
zip = "2.2"
env_logger = "0.11"

# JavaScript runtime for plugins
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }

# Auto-launch (will be adapted for systemd)
auto-launch = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
env_logger = "0.11"
