[package]
name = "cc-switch-tui"
version = "3.11.1"
description = "Terminal UI for CC-Switch"
authors = ["Jason Young"]
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"
edition = "2021"
rust-version = "1.85.0"

[[bin]]
name = "cc-switch-tui"
path = "src/main.rs"

[dependencies]
cc-switch-core = { path = "../cc-switch-core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

# TUI libraries
ratatui = "0.28"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
env_logger = "0.11"

# Unix-specific for daemon mode
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
maintainer = "Jason Young"
copyright = "2024, Jason Young <jason@example.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A terminal user interface for CC-Switch, an AI provider proxy with automatic failover.\
Provides an interactive TUI for managing and monitoring the CC-Switch service."""
depends = "libc6"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cc-switch-tui", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/cc-switch-tui/README", "644"],
]
